--- a/P005387.opf/meta.yml
+++ b/P005387.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P005387
+id: P005387
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1KG24925
   title: ཀྲུང་གོ་གུང་ཁྲན་ཏང་གི་ལོ་རྒྱུས།
-  volume: ''
   author: ''
+  volumes: {}
