--- a/P005387.opf/layers/v001/Pagination.yml
+++ b/P005387.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 4fb2d6cf4304454ab5dd7db71fc521b9
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   6ae2529a4c9f4796b79e3055d86ab1d5:
