--- a/P005387.opf/layers/v003/Pagination.yml
+++ b/P005387.opf/layers/v003/Pagination.yml
@@ -1,5 +1,5 @@
 id: 20e6ba154de4427c9d8c64d1b3954426
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   1065f07d2995427ba71c8c22f97b0324:
