--- a/P005387.opf/layers/v002/Pagination.yml
+++ b/P005387.opf/layers/v002/Pagination.yml
@@ -1,5 +1,5 @@
 id: d291b558d05647b382fa6e2d10487fc1
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   d3dca72bee0b4c70bbbd457b5724f642:
