--- a/P005387.opf/meta.yml
+++ b/P005387.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P005387
 initial_creation_type: ocr
+created_at: 21/03/2020
+last_modified_at: 24/11/2021
 source_metadata:
   id: bdr:W1KG24925
   title: ཀྲུང་གོ་གུང་ཁྲན་ཏང་གི་ལོ་རྒྱུས།
